--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.android.support:design:23.0.1'
     compile files('libs/jpct_ae.jar')
+    compile files('libs/vecmath.jar')
+    compile files('libs/jbullet.jar')
 }
