--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,9 @@
         <activity
             android:name=".activity.helper.CastleActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.AppBarOverlay">
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -29,8 +28,6 @@
         <activity
             android:name=".activity.helper.Story"
             android:screenOrientation="landscape"></activity>
-        <activity
-            android:name=".MainActivity"
-            android:screenOrientation="landscape"></activity>
+
     </application>
 </manifest>
